--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@
 import Navbar from '../components/Navbar.vue';
 import Display from '../components/Display.vue';
 import Hero from '../components/Hero.vue';
+import Footer from '../components/Footer.vue';
 
 const linksLeft= [
 	{
@@ -61,6 +62,7 @@ const droneShots = [
 		/>
 		<Hero />
 		<Display droneShots={droneShots}/>
+			<Footer />
 			</div>
 	</body>
 </html>
